Add class theme element into nav

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,13 @@ html(lang="en")
                         img(src="/images/logo.png", alt="logo")
                 h1  
                     a(href='/club') Only Messages
+                nav
+                    div.theme
+                        span.icon.mdi--day
+                        div.wrapToggleButton
+                            button.themeToggle(type="button")
+                                div
+                        span.icon.mdi--night
                     button.account(type="button")
                         div.wrapIcon
                             span.icon.mdi--account
