Add class name to list

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,7 +39,7 @@ html(lang="en")
                                 span.icon.mdi--account
                     ul
                         if loginUser
-                            li
+                            li.email
                                 p #[Strong Signed in as]
                                 p= loginUser.email
                         li
