--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -189,3 +189,22 @@ main h2 {
 	filter: invert(100%) sepia(1%) saturate(6118%) hue-rotate(281deg)
 		brightness(117%) contrast(64%);
 }
+
+@media (min-width: 500px) {
+	main > * {
+		margin: 0 auto;
+		max-width: 400px;
+	}
+}
+
+@media (min-width: 700px) {
+	main > * {
+		max-width: 500px;
+	}
+}
+
+@media (min-width: 900px) {
+	main > * {
+		max-width: 600px;
+	}
+}
