--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -239,8 +239,8 @@
 .home .addMessage {
 	position: fixed;
 	bottom: 10%;
-	right: 30px;
-	padding: 10px;
+	right: 10%;
+	padding: 5px;
 	border-radius: 100%;
 	background-color: var(--light-scheme-highlight-color);
 	display: flex;
