--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -250,8 +250,8 @@
 }
 
 .home .addMessage .icon {
-	width: var(--icon-desktop-size);
-	height: var(--icon-desktop-size);
+	width: 35px;
+	height: 35px;
 	filter: invert(100%) sepia(1%) saturate(6118%) hue-rotate(281deg)
 		brightness(117%) contrast(64%);
 }
