Add dark theme h2 style

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -271,6 +271,10 @@
 }
 
 /* dark theme */
+
+.dark .home h2 {
+	color: var(--dark-scheme-highlight-color);
+}
 .dark .home > p:first-of-type span {
 	color: var(--dark-scheme-highlight-color);
 }
