--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -12,10 +12,9 @@ header {
 	z-index: 1;
 }
 
-header .logo h1 {
-	opacity: 0;
-	position: absolute;
-	right: 100%;
+header h1 {
+	font-size: 1.5rem;
+	margin: 0 auto;
 }
 
 header .logo a {
