--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -146,6 +146,7 @@ header nav ul {
 	flex-direction: column;
 	opacity: 0;
 	visibility: hidden;
+	overflow: hidden;
 }
 
 header nav ul li:first-of-type {
