Add a p element to class addMessage

--- a/views/index.pug
+++ b/views/index.pug
@@ -45,3 +45,4 @@ block content
         if loginUser
             a.addMessage(href="/club/message/create" title="Send a message")
                 span.icon.mdi--message-plus
+                p Send
