--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -101,7 +101,6 @@
 	color: var(--light-scheme-color);
 }
 
-
 .home ul li .content {
 	display: grid;
 	grid-template:
@@ -247,6 +246,19 @@
 	justify-content: center;
 	align-items: center;
 	z-index: 3;
+}
+
+.home .addMessage:hover p {
+	opacity: 1;
+}
+
+.home .addMessage p {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: opacity 0.3s ease;
 }
 
 .home .addMessage .icon {
