--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ block content
                                     span.icon.mdi--anonymous
                             div.topBar
                                 p.name!= (!loginUser || loginUser.id  !==  message.user.id) ?  message.user.name : 'You'
-                                if loginUser && loginUser.isAdmin
+                                if loginUser && (loginUser.isAdmin || loginUser.id === message.user.id )
                                     div.link
                                         a(href=`/club/message/delete/${message.id}`) 
                                             span.icon.mdi--delete
