Create formatDates script

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 block head
     link(rel='stylesheet', href='/stylesheets/home.css')
     script(type='text/javascript', src='/javascripts/getScrollPosition.js', defer)
+    script(type='text/javascript', src='/javascripts/formatDates.js', defer)
 
 
 block content
