Change footer link href value

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -66,6 +66,6 @@ html(lang="en")
             main
                 block content
             footer 
-                a(href="#" rel="noreferrer" target="_blank" aria-label="visit author's github")
+                a(href="https://github.com/whitesgr03/only-messages" rel="noreferrer" target="_blank" aria-label="visit author's github")
                     span.icon.mdi--github
                 span © 2023 - Designed & coded by Weiss Bai
